# twitchaudio

./: .gitignore  LICENSE  README.md  default  main.py  pyproject.toml  requirements.txt
scripts/: install-linux.sh  install-macos.sh  install-windows.ps1
src/twitchaudio/: __init__.py  app.py
