[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twitchaudio"
version = "0.1.0"
description = "Low-bandwidth Twitch audio GUI with encrypted stream history."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "ornab74" }
]
keywords = ["twitch", "audio", "chat", "streamlink", "customtkinter", "ffplay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "customtkinter>=5.2.2",
    "cryptography>=42.0.0",
    "streamlink>=6.8.0",
]

[project.scripts]
twitchaudio = "twitchaudio.app:main"

[project.gui-scripts]
twitchaudio-gui = "twitchaudio.app:main"

[tool.setuptools.packages.find]
where = ["src"]
